--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,19 +31,54 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # UI 관련
   cupertino_icons: ^1.0.8
+  
+  # 상태 관리
+  flutter_bloc: ^8.1.3
+  bloc: ^8.1.2
+  
+  # 의존성 주입
+  get_it: ^7.6.4
+  injectable: ^2.3.2
+  
+  # 네트워킹
+  dio: ^5.3.2
+  retrofit: ^4.0.3
+  
+  # 로컬 저장소
+  shared_preferences: ^2.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  
+  # JSON 직렬화
+  json_annotation: ^4.8.1
+  
+  # 유틸리티
+  equatable: ^2.0.5
+  dartz: ^0.10.1
+  
+  # UI 컴포넌트
+  cached_network_image: ^3.3.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  # 코드 생성
+  build_runner: ^2.4.7
+  json_serializable: ^6.7.1
+  injectable_generator: ^2.4.1
+  retrofit_generator: ^8.0.4
+  hive_generator: ^2.0.1
+  
+  # 테스팅
+  bloc_test: ^9.1.5
+  mockito: ^5.4.2
+  
+  # 린팅
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
