--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ dependencies:
   # UI 컴포넌트
   cached_network_image: ^3.3.0
   shimmer: ^3.0.0
+  
+  # 환경 변수
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -92,9 +95,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
